platform/observability/beszel/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`beszel.mso.lol`)
      kind: Rule
      middlewares:
        - name: chain-auth
          namespace: traefik
      services:
        - name: beszel
          port: 8090
  tls:
    certResolver: cloudflare
